[project]
name = "investment-assistance-dashboard"
version = "0.1.0"
description = ""
authors = [
    {name = "Sangjun Yoo",email = "sjyoo4893@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "ollama (>=0.4.7,<0.5.0)",
    "streamlit (>=1.43.2,<2.0.0)",
    "yfinance (>=0.2.55,<0.3.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "duckduckgo-search (>=7.5.3,<8.0.0)",
    "nbformat (>=5.10.4,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
